crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N818_N818.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N818 Exception name `C` should be named with an Error suffix
 --> N818.py:9:7
  |
9 | class C(Exception):
  |       ^
  |

N818 Exception name `E` should be named with an Error suffix
  --> N818.py:17:7
   |
17 | class E(AnotherError):
   |       ^
   |
