crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__camelcase-imported-as-lowercase_N813.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N813 Camelcase `Camel` imported as lowercase `camel`
 --> N813.py:1:8
  |
1 | import mod.Camel as camel
  |        ^^^^^^^^^^^^^^^^^^
2 | from mod import CamelCase as camelcase
3 | from mod import AnotherCamelCase as another_camelcase
  |

N813 Camelcase `CamelCase` imported as lowercase `camelcase`
 --> N813.py:2:17
  |
1 | import mod.Camel as camel
2 | from mod import CamelCase as camelcase
  |                 ^^^^^^^^^^^^^^^^^^^^^^
3 | from mod import AnotherCamelCase as another_camelcase
  |

N813 Camelcase `AnotherCamelCase` imported as lowercase `another_camelcase`
 --> N813.py:3:17
  |
1 | import mod.Camel as camel
2 | from mod import CamelCase as camelcase
3 | from mod import AnotherCamelCase as another_camelcase
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
