crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__camelcase_imported_as_incorrect_convention.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N817 CamelCase `CaMel` imported as acronym `CM`
 --> N817.py:1:8
  |
1 | import mod.CaMel as CM
  |        ^^^^^^^^^^^^^^^
2 | from mod import CamelCase as CC
  |

N817 CamelCase `CamelCase` imported as acronym `CC`
 --> N817.py:2:17
  |
1 | import mod.CaMel as CM
2 | from mod import CamelCase as CC
  |                 ^^^^^^^^^^^^^^^

N817 CamelCase `ElementTree` imported as acronym `ET`
 --> N817.py:6:8
  |
5 | # OK depending on configured import convention
6 | import xml.etree.ElementTree as ET
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 | from xml.etree import ElementTree as ET
  |

N817 CamelCase `ElementTree` imported as acronym `ET`
 --> N817.py:7:23
  |
5 | # OK depending on configured import convention
6 | import xml.etree.ElementTree as ET
7 | from xml.etree import ElementTree as ET
  |                       ^^^^^^^^^^^^^^^^^
8 |
9 | # Always an error (relative import)
  |

N817 CamelCase `ElementTree` imported as acronym `ET`
  --> N817.py:10:26
   |
 9 | # Always an error (relative import)
10 | from ..xml.eltree import ElementTree as ET
   |                          ^^^^^^^^^^^^^^^^^
