crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__constant-imported-as-non-constant_N811.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N811 Constant `CONST` imported as non-constant `const`
 --> N811.py:1:8
  |
1 | import mod.CONST as const
  |        ^^^^^^^^^^^^^^^^^^
2 | from mod import CONSTANT as constant
3 | from mod import ANOTHER_CONSTANT as another_constant
  |

N811 Constant `CONSTANT` imported as non-constant `constant`
 --> N811.py:2:17
  |
1 | import mod.CONST as const
2 | from mod import CONSTANT as constant
  |                 ^^^^^^^^^^^^^^^^^^^^
3 | from mod import ANOTHER_CONSTANT as another_constant
4 | import mod.CON as c
  |

N811 Constant `ANOTHER_CONSTANT` imported as non-constant `another_constant`
 --> N811.py:3:17
  |
1 | import mod.CONST as const
2 | from mod import CONSTANT as constant
3 | from mod import ANOTHER_CONSTANT as another_constant
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 | import mod.CON as c
5 | from mod import C as c
  |

N811 Constant `CON` imported as non-constant `c`
 --> N811.py:4:8
  |
2 | from mod import CONSTANT as constant
3 | from mod import ANOTHER_CONSTANT as another_constant
4 | import mod.CON as c
  |        ^^^^^^^^^^^^
5 | from mod import C as c
  |

N811 Constant `C` imported as non-constant `c`
 --> N811.py:5:17
  |
3 | from mod import ANOTHER_CONSTANT as another_constant
4 | import mod.CON as c
5 | from mod import C as c
  |                 ^^^^^^
6 |
7 | # These are all OK:
  |
