crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N801_N801.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N801 Class name `stillBad` should use CapWords convention
 --> N801.py:4:7
  |
4 | class stillBad:
  |       ^^^^^^^^
  |

N801 Class name `STILL_BAD` should use CapWords convention
  --> N801.py:10:7
   |
10 | class STILL_BAD:
   |       ^^^^^^^^^
   |
